# Project2-LocalDescriptorAndBagOfFeature

./: README.md
Source/: CMakeLists.txt  Categorize.cpp  Classifier.cpp  Codebook.cpp  Test.cpp  test_feature.cpp
Source/BagOfFeatures/: CMakeLists.txt  Codewords.cpp  Codewords.hpp
Source/Classification/: CMakeLists.txt  NearestCentroidClassifier.cpp  NearestCentroidClassifier.hpp
Source/Extraction/: CMakeLists.txt  DetectFeature.cpp  DetectFeature.hpp
Source/GMM/: CMakeLists.txt  GMM.cpp  GMM.hpp
Source/Quantization/: CMakeLists.txt  CodewordUncertainty.cpp  CodewordUncertainty.hpp  HardAssignment.cpp  HardAssignment.hpp  Quantization.hpp  VocabularyTreeQuantization.cpp  VocabularyTreeQuantization.hpp
Source/SVM/: CMakeLists.txt  svm.cpp
Source/Util/: CMakeLists.txt  Clustering.cpp  Clustering.hpp  Datasets.cpp  Datasets.hpp  Distances.cpp  Distances.hpp  Dog.cpp  Dog.hpp  Types.hpp
